# l5rSheet

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  main.yml
qml/: FixedTextArea.qml  GeneralInfoPanel.qml  Main.qml  RingsPanel.qml  SchoolPanel.qml  SkillPanel.qml  WeaponAndAdventagePanel.qml  WoundPanel.qml
src/: import_qml_plugins.h  main.cpp
